--- a/HTML-CSS-3/css/style.css
+++ b/HTML-CSS-3/css/style.css
@@ -11,7 +11,9 @@ html body {
   background-color: brown;
   position: relative;
   height: 100%;
-  background-image: linear-gradient(to bottom right, rgba(0, 77, 26, 0.9), rgba(173, 235, 173, 0.2), #c1f0c1), url("../img/bg.jpg");
+  background-image: url("../img/bg.jpg");
+  background-position: center;
+  background-size: cover;
 }
 .header h1 {
   color: white;
