--- a/MOVIE-APP-UDEMY/css/base.css
+++ b/MOVIE-APP-UDEMY/css/base.css
@@ -9,7 +9,11 @@
     font-size: 1.4rem;
     font-family: 'Lato', sans-serif;
   }
- 
+  .container{
+    padding-left: 10px;
+    padding-right: 10px;
+    width: 100%;
+  }
 @media (min-width: 576px){
   html{
     font-size: 68%;
@@ -76,6 +80,11 @@
   
   }
   
+  @media (max-width: 768px){
+    .col-2,.col-3{
+      width: 100%;
+    }
+  }
 .clearfix::after {
     content: "";
     display: block;
