--- a/MOVIE-APP-UDEMY/css/forms.css
+++ b/MOVIE-APP-UDEMY/css/forms.css
@@ -1,22 +1,27 @@
 .signup-page{
-    padding-top: 20px ;
+    padding-top: 60px ;
 }
 
 .signup-title{
     text-align: center;
-    font-size: 30px;
+    font-size: 20px;
     color: #2e4c6d;
 }
 .signup-form {
-    width: 500px;
-    margin: auto;
+width: 100%;
 }
 
+@media (min-width : 768px){
+    .signup-form {
+        width: 500px;
+        margin: 0 auto;
+        }
+  }
 .signup-form label,
 .signup-form input:not([type="checkbox"]),
 .signup-form select {
-    margin-top: 10px;
-    padding: 6px;
+    margin-top: 5px;
+    padding: 3px;
     display: block;
     width: 100%;
 }
